# exodus

./: .gitignore  Cargo.toml  Makefile.toml  build.rs  index.html  rust-toolchain
.cargo/: config.toml
.github/: semantic.yml
assets/data/plants/: dandelion.toml  stinging nettle.toml
crates/data-manager/: Cargo.toml
crates/data-manager/src/: main.rs  sql.rs
crates/data-types/: Cargo.toml
crates/data-types/src/: error.rs  lib.rs  property.rs  ty.rs
crates/data-types/src/ty/: plant.rs
data/: database.sqlite3
data/migrations/: 20210223115117_add_plants_table.sql  README.md
rfc/: README.md
rfc/text/: xxx-data-driven-object-management.md
src/: app.rs  arch.rs  component.rs  event.rs  kind.rs  lib.rs  main.rs  state.rs  system.rs  tile.rs
src/app/: label.rs  plugin.rs  stage.rs  state.rs
src/kind/: atlas.rs  camera_focus.rs  data.rs  direction.rs  player.rs  position.rs
src/state/: player.rs  tileset.rs
src/system/: camera.rs  data.rs  input.rs  player.rs  render.rs  setup.rs  state_transition.rs  tileset.rs  world.rs
