[package]
name = "exodus"
version = "0.1.0"
edition = "2018"
resolver = "2"
authors = [
    "Jean Mertz <git@jeanmertz.com>",
    "Exodus Contributors <exodus@rustic.games>",
]

[features]
headless = []

[dependencies]
bevy_rng = { git = "https://github.com/rustic-games/bevy_rng", default-features = false, features = ["bevy-nightly"] }
cfg-if = "1"
parking_lot = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "c2a427f1a38db6b1d9798e631a7da7a8507fe18c", default-features = false, features = ["bevy_winit", "render", "png"] }
bevy_webgl2 = { git = "https://github.com/mrk-its/bevy_webgl2", rev = "b5e842e421be56af9e69ababdaeb028b05c5b7a2", default-features = false } # see: https://github.com/bevyengine/bevy/issues/793

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "c2a427f1a38db6b1d9798e631a7da7a8507fe18c", default-features = false, features = ["bevy_winit", "render", "png", "bevy_wgpu"] }
