[package]
name = "data-manager"
version = "0.1.0"
authors = ["Jean Mertz <git@jeanmertz.com>"]
edition = "2018"

[dependencies]
data = { package = "data-types", path = "../data-types" }

anyhow = "1"
rusqlite = { version = "0.24", features = ["uuid", "bundled"] }
toml = "0.5"
uuid = { version = "0.8", features = ["v4", "serde"] }
walkdir = "2"
