[package]
name = "data-types"
version = "0.1.0"
authors = ["Jean Mertz <git@jeanmertz.com>"]
edition = "2018"

[dependencies]
enum_dispatch = { version = "0.3.5", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "1"
uuid = { version = "0.8", features = ["serde"] }
